index.html added

--- a/commentaries.html
+++ b/commentaries.html
@@ -19,14 +19,14 @@
   
   <body>
     <div class="container">
-      <h1 style="margin-bottom:0.5em"><a href="home.html">CS 222: AI Agents and Simulations</a></h1>
+      <h1 style="margin-bottom:0.5em"><a href="index.html">CS 222: AI Agents and Simulations</a></h1>
       <div class="header-row">
         <div class="course-info">
           <h5>STANFORD UNIVERSITY, FALL 2024</h5>
           <h5><strong>Lecture:</strong> M W 01:30p-02:50p; Lathrop Library, Rm 299</h5>
         </div>
         <div class="nav-links">
-          <a href="home.html">Home</a> &nbsp;&nbsp;&nbsp;| 
+          <a href="index.html">Home</a> &nbsp;&nbsp;&nbsp;| 
           <a href="#" style="font-weight:600;">Commentary Guidelines</a> &nbsp;&nbsp;&nbsp;| 
           <a href="logistics.html">Logistics</a>
         </div>
