--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <body>
     <div class="container">
-      <h1 style="margin-bottom:0.5em"><a href="home.html">CS 222: AI Agents and Simulations</a></h1>
+      <h1 style="margin-bottom:0.5em"><a href="index.html">CS 222: AI Agents and Simulations</a></h1>
       <div class="header-row">
         <div class="course-info">
           <h5>STANFORD UNIVERSITY, FALL 2024</h5>
