--- a/commentaries.html
+++ b/commentaries.html
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <h3>Paper Commentary Guidelines</h1>
+      <h3>Paper Commentary Guidelines <small style="font-size:0.7em">(h/t to CS347 Guidelines)</small></h1>
 
       <p>The goal of paper commentaries is to get you to think critically about the research that a paper presents and why that research is important. You will write brief commentary reflections—around three to four paragraphs—for each reading in the course.</p>
 
@@ -64,7 +64,7 @@
           <li>How the paper has changed your opinion or outlook on a topic</li>
       </ul>
 
-      <p>Commentaries are due at 5:00 PM the day before the lecture on Canvas. After 5pm, your commentary will be viewable by students in your section so that the discussant can begin work on their metacommentary. Late submissions will not be accepted. We will drop the four lowest commentary grades at the end of class: meaning, you may drop four readings’ (not three days’) worth of commentaries.</p>
+      <p>Commentaries are due at 10:00 PM the day before the lecture on Canvas. Late submissions will not be accepted. We will drop the two lowest commentary grades at the end of class: meaning, you may drop two days' worth of commentaries.</p>
 
       <h4>Commentary Grading</h4>
       <p>Commentaries will be graded on a check-minus/check/check-plus scale. The rubric will be:</p>
