--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
       </div>
 
       <div style="padding:1em">
-        <div style="padding:2em; background: #FFE5E5; border-radius: 15px;">
-          <h4>Announcement:</h4>
-          How might we craft simulations of human societies that reflect our lives? Many of the greatest challenges of our time, from encouraging healthy public discourse to designing pandemic responses, and building global cooperation for s
+        <div style="padding:2em; background: #FFEED2; border-radius: 15px;">
+          <h4>Announcement <small style="font-size:0.7em">(Saturday 9.21.2024)</small></h4>
+          Hi everyone – welcome to the fall quarter, and thank you for your interest in this course! <br><br>
+
+          Quick announcement: this class has received significantly more registrations than we had planned for. We are currently discussing how best to accommodate the interest while ensuring we can provide a good course experience for those who stay for the quarter. However, it is possible that we may not be able to accommodate everyone. For now, if you are already registered and interested in the course, please submit this interest form by <strong>10 pm on Tuesday, September 24, 2024</strong>.
+
+          <br><br>
+
+          [<a href="https://forms.gle/ucqZyuLxMCyNTvm7A" target="_blank">Go to the Form</a>]
         </div>
       </div>
 
@@ -80,6 +86,8 @@
 
 
       <h3>Schedule</h3>
+
+      <p>Note: Reading commentaries are due at <strong>10:00 PM the day before the lecture</strong> on Canvas.</p>
 
       <table class="table table-striped">
         <thead>
