--- a/logistics.html
+++ b/logistics.html
@@ -27,7 +27,7 @@
         </div>
         <div class="nav-links">
           <a href="index.html">Home</a> &nbsp;&nbsp;&nbsp;| 
-          <a href="Commentaries.html">Commentary Guidelines</a> &nbsp;&nbsp;&nbsp;| 
+          <a href="commentaries.html">Commentary Guidelines</a> &nbsp;&nbsp;&nbsp;| 
           <a href="#" style="font-weight:600;">Logistics</a>
         </div>
       </div>
