--- a/logistics.html
+++ b/logistics.html
@@ -19,11 +19,12 @@
   
   <body>
     <div class="container">
-      <h1 style="margin-bottom:0.5em"><a href="index.html">CS 222: AI Agents and Simulations</a></h1>
+      <h1 style="margin-bottom:0.5em"><a href="index.html"><strong style="font-weight:700">CS 222:</strong> AI Agents and Simulations</a></h1>
       <div class="header-row">
         <div class="course-info">
           <h5>STANFORD UNIVERSITY, FALL 2024</h5>
           <h5><strong>Lecture:</strong> M W 01:30p-02:50p; Lathrop Library, Rm 299</h5>
+          <!-- <h5 style="margin-top:0.4em"><strong>Contact:</strong> cs222-ai-simulations@cs.stanford.edu</h5> -->
         </div>
         <div class="nav-links">
           <a href="index.html">Home</a> &nbsp;&nbsp;&nbsp;| 
