--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="course-info">
           <h5>STANFORD UNIVERSITY, FALL 2024</h5>
           <h5><strong>Lecture:</strong> M W 01:30p-02:50p; Lathrop Library, Rm 299</h5>
-          <!-- <h5 style="margin-top:0.4em"><strong>Contact:</strong> cs222-ai-simulations@cs.stanford.edu</h5> -->
+          <h5 style="margin-top:0.4em"><strong>Contact:</strong> cs222-ai-simulations@cs.stanford.edu</h5>
         </div>
         <div class="nav-links">
           <a href="#" style="font-weight:600;">Home</a> &nbsp;&nbsp;&nbsp;| 
@@ -136,8 +136,8 @@
               </p>
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
-                <li>J. S. Park, et al., Social simulacra: Creating Populated Prototypes for Social Computing Systems, in Proceedings of the 35th Annual ACM Symposium on User Interface Software and Technology (2022). <a href="https://arxiv.org/abs/2208.04024" target="_blank">[pdf]</a></li>
-                <li>L. P. Argyle et al., Out of one, many: Using language models to simulate human samples. Political Analysis (2023). <a href="https://www.cambridge.org/core/journals/political-analysis/article/out-of-one-many-using-language-models-to-simulate-human-samples/035D7C8A55B237942FB6DBAD7CAA4E49" target="_blank">[pdf]</a></li>
+                <li>J. S. Park, L. Popowski, C. J. Cai, M. R. Morris, P. Liang, M. S. Bernstein, Social simulacra: Creating Populated Prototypes for Social Computing Systems, in Proceedings of the 35th Annual ACM Symposium on User Interface Software and Technology (ACM, 2022). <a href="https://arxiv.org/abs/2208.04024" target="_blank">[pdf]</a></li>
+                <li>L. P. Argyle, E. C. Busby, N. Fulda, J. R. Gubler, G. Rytting, D. Wingate, Out of one, many: Using language models to simulate human samples. Political Analysis (2023). <a href="https://www.cambridge.org/core/journals/political-analysis/article/out-of-one-many-using-language-models-to-simulate-human-samples/035D7C8A55B237942FB6DBAD7CAA4E49" target="_blank">[pdf]</a></li>
               </ul>
             </td>
             <td class="assignments"></td>
@@ -168,8 +168,8 @@
               </p>
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
-                <li>J. S. Park, et al., Generative agents: Interactive simulacra of human behavior, in Proceedings of the 36th Annual ACM Symposium on User Interface Software and Technology (2023). <a href="https://arxiv.org/abs/2304.03442" target="_blank">[pdf]</a></li>
-                <li>T. R. Sumers, et al., Cognitive Architectures for Language Agents. Trans. Mach. Learn. Res. (2024). <a href="https://arxiv.org/abs/2309.02427" target="_blank">[pdf]</a></li>
+                <li>J. S. Park, J. C. O'Brien, C. J. Cai, M. R. Morris, P. Liang, M. S. Bernstein, Generative agents: Interactive simulacra of human behavior, in Proceedings of the 36th Annual ACM Symposium on User Interface Software and Technology (ACM, 2023). <a href="https://arxiv.org/abs/2304.03442" target="_blank">[pdf]</a></li>
+                <li>T. R. Sumers, S. Yao, K. Narasimhan, T. L. Griffiths, Cognitive Architectures for Language Agents. Trans. Mach. Learn. Res. (2024). <a href="https://arxiv.org/abs/2309.02427" target="_blank">[pdf]</a></li>
               </ul>
             </td>
             <td class="assignments"></td>
@@ -201,7 +201,7 @@
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
                 <li>J. Bates, The Role of Emotion in Believable Agents. Commun. ACM 37, 122-125 (1994). <a href="https://dl.acm.org/doi/10.1145/176789.176803" target="_blank">[pdf]</a></li>
-                <li>A. Ashokkumar, et al., Predicting Results of Social Science Experiments Using Large Language Models (2024). <a href="https://samim.io/dl/Predicting%20results%20of%20social%20science%20experiments%20using%20large%20language%20models.pdf" target="_blank">[pdf]</a></li>
+                <li>A. Ashokkumar, L. Hewitt, I. Ghezae, R. Willer, Predicting Results of Social Science Experiments Using Large Language Models (2024). <a href="https://samim.io/dl/Predicting%20results%20of%20social%20science%20experiments%20using%20large%20language%20models.pdf" target="_blank">[pdf]</a></li>
               </ul>
             </td>
             <td class="assignments"></td>
@@ -216,7 +216,7 @@
               </p>
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
-                <li>J. S. Park, C. Q. Zou, et al., -- (2024). <a href="#" target="_blank">[pdf]</a></li>
+                <li>Joon Sung Park, Carolyn Q. Zou, Aaron Shaw, Benjamin Mako Hill, Carrie J. Cai, Meredith Ringel Morris, Robb Willer, Percy Liang, Michael S. Bernstein. -- (2024). [pdf]</li>
                 <li>S. Ansolabehere, J. Rodden, J. M. Snyder Jr., The Strength of Issues: Using Multiple Measures to Gauge Preference Stability, Ideological Constraint, and Issue Voting. American Political Science Review (2008). <a href="https://www.cambridge.org/core/journals/american-political-science-review/article/strength-of-issues-using-multiple-measures-to-gauge-preference-stability-ideological-constraint-and-issue-voting/16F6AF97F7B71AA0112EC9ADF78B553A" target="_blank">[pdf]</a></li>
               </ul>
             </td>
@@ -287,7 +287,7 @@
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
                 <li>A. Wang, J. Morgenstern, J. P. Dickerson, Large language models cannot replace human participants because they cannot portray identity groups (2024). <a href="https://arxiv.org/abs/2402.01908" target="_blank">[pdf]</a></li>
-                <li>S. Santurkar, et al., Proceedings of the 40th International Conference on Machine Learning (2023). <a href="https://arxiv.org/abs/2303.17548" target="_blank">[pdf]</a></li>
+                <li>S. Santurkar, E. Durmus, F. Ladhak, C. Lee, P. Liang, T. Hashimoto, in Proceedings of the 40th International Conference on Machine Learning (2023). <a href="https://arxiv.org/abs/2303.17548" target="_blank">[pdf]</a></li>
               </ul>
             </td>
             <td class="assignments"></td>
