--- a/logistics.html
+++ b/logistics.html
@@ -24,7 +24,7 @@
         <div class="course-info">
           <h5>STANFORD UNIVERSITY, FALL 2024</h5>
           <h5><strong>Lecture:</strong> M W 01:30p-02:50p; Lathrop Library, Rm 299</h5>
-          <!-- <h5 style="margin-top:0.4em"><strong>Contact:</strong> cs222-ai-simulations@cs.stanford.edu</h5> -->
+          <h5 style="margin-top:0.4em"><strong>Contact:</strong> cs222-ai-simulations@cs.stanford.edu</h5>
         </div>
         <div class="nav-links">
           <a href="index.html">Home</a> &nbsp;&nbsp;&nbsp;| 
