--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header-row">
         <div class="course-info">
           <h5>STANFORD UNIVERSITY, FALL 2024</h5>
-          <h5><strong>Lecture:</strong> M W 01:30p-02:50p; Lathrop Library, Rm 299</h5>
+          <h5><strong>Location:</strong> M W 01:30p-02:50p; Lathrop Library, Rm 299</h5>
           <h5 style="margin-top:0.4em"><strong>Contact:</strong> cs222-ai-simulations@cs.stanford.edu</h5>
         </div>
         <div class="nav-links">
