--- a/commentaries.html
+++ b/commentaries.html
@@ -84,6 +84,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
+    <style>
+      #clustrmaps-widget-v2 {display:none}
+    </style>
     <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=rDNfvAHv84dw1Tk_JlTsLjTtnq6iYukX3dLUp5UICFY&cl=ffffff&w=a"></script>
     <a href="https://clustrmaps.com/site/1c1df" style="display:none !important"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=rDNfvAHv84dw1Tk_JlTsLjTtnq6iYukX3dLUp5UICFY&cl=ffffff" style="display:none !important"  /></a>
   </body>
