Lecture 1 Slides added

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <tbody>
           <tr>
             <td class="lecture_date">M, 9/23 <br><span>(Week 1)</span></td>
-            <td class="lecture_titles">A Tour of Simulations: Past, Present, and Future</td>
+            <td class="lecture_titles">A Tour of Simulations: Past, Present, and Future <a href="static_dir/pdf/StanfordCS222_Lecture1.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 What are simulations of human behavior? Where have we been, where are we now, and where are we headed? An introduction to the motivation and history behind simulations, from early methods like cellular automata and game theory, to agent-based modeling, and now modern generative AI-driven simulations.
