--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="profile-details">
             <p><a href="https://www.joonsungpark.com/" target="_blank">Joon Sung Park</a></p>
             <p>Office Hours: Friday 1:00-2:00 pm</p>
-            <p>Location: Gates 3B Common Area</p>
+            <p>Location: Gates Office #360</p>
           </div>
         </div>
         <!-- <div class="namecard">
