--- a/logistics.html
+++ b/logistics.html
@@ -87,7 +87,7 @@
 
       <h3>Students with Documented Disabilities</h3>
       <p>
-        Students who may need an academic accommodation based on the impact of a disability must initiate the request with the <a href="https://oae.stanford.edu/" target="_blank">Office of Accessible Education (OAE)</a>. Professional staff will evaluate the request with required documentation, recommend reasonable accommodations, and prepare an Accommodation Letter for faculty dated in the current quarter in which the request is being made. Students should contact the OAE as soon as possible since timely notice is needed to coordinate accommodations. The OAE is located at 563 Salvatierra Walk (phone: 723-1066, URL: <a href="https://oae.stanford.edu/" target="_blank">http://oae.stanford.edu</a>). Please send any accomodations letters to cs347@cs.stanford.edu.
+        Students who may need an academic accommodation based on the impact of a disability must initiate the request with the <a href="https://oae.stanford.edu/" target="_blank">Office of Accessible Education (OAE)</a>. Professional staff will evaluate the request with required documentation, recommend reasonable accommodations, and prepare an Accommodation Letter for faculty dated in the current quarter in which the request is being made. Students should contact the OAE as soon as possible since timely notice is needed to coordinate accommodations. The OAE is located at 563 Salvatierra Walk (phone: 723-1066, URL: <a href="https://oae.stanford.edu/" target="_blank">http://oae.stanford.edu</a>). Please send any accomodations letters to cs222-ai-simulations@cs.stanford.edu.
       </p>
 
 
