--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
           <tr>
             <td class="lecture_date">W, 9/25</td>
-            <td class="lecture_titles">Wicked Problems</td>
+            <td class="lecture_titles">Wicked Problems <a href="static_dir/pdf/StanfordCS222_Lecture2.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 What are the complex problems that simulations can help us tackle—problems that have been otherwise unsolvable or extremely challenging? An overview of the “wicked problems” faced by individuals and societies, and discussion of the grand challenges of our time and how simulations might offer new approaches.
