--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
           <h4>Announcement <small style="font-size:0.7em">(Saturday 9.21.2024)</small></h4>
           Hi everyone – welcome to the fall quarter, and thank you for your interest in this course! <br><br>
 
-          Quick announcement: this class has received significantly more registrations than we had planned for. We are currently discussing how best to accommodate the interest while ensuring we can provide a good course experience for those who stay for the quarter. However, it is possible that we may not be able to accommodate everyone. For now, if you are already registered and interested in the course, please submit this interest form by <strong>10 pm on Tuesday, September 24, 2024</strong>.
-
-          <br><br>
-
-          [<a href="https://forms.gle/ucqZyuLxMCyNTvm7A" target="_blank">Go to the Form</a>]
+          Quick announcement: This class has received significantly more registrations than expected, and we are currently unable to accommodate additional students for this quarter. However, we welcome students to audit the lectures.
         </div>
       </div>
 
