--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h4>Announcement <small style="font-size:0.7em">(Saturday 9.21.2024)</small></h4>
           Hi everyone – welcome to the fall quarter, and thank you for your interest in this course! <br><br>
 
-          Quick announcement: This class has received significantly more registrations than expected, and we are currently unable to accommodate additional students for this quarter. However, we welcome students to audit the lectures.
+          Quick announcement: This class has received significantly more registrations than expected, and we are currently unable to accommodate additional students for this quarter unless you are already registered. However, we welcome students to audit the lectures.
         </div>
       </div>
 
