--- a/index.html
+++ b/index.html
@@ -53,29 +53,43 @@
       </div>
 
 
-      <h3>Instructor</h3>
+      <h3>Teaching Staff</h3>
 
       <div class="namecard-container">
         <div class="namecard">
-          <div class="profile-photo">
-            <a href="https://www.joonsungpark.com/" target="_blank"><img src="static_dir/img/JoonSungPark.jpg" alt="Joon Sung Park"></a>
-          </div>
-          <div class="profile-details">
-            <p><a href="https://www.joonsungpark.com/" target="_blank">Joon Sung Park</a></p>
-            <p>Office Hours: Friday 1:00-2:00 pm</p>
-            <p>Location: Gates Office #360</p>
+          <h6 class="namecard-header">Instructor</h6>
+          <div class="namecard-content">
+            <div class="profile-photo">
+              <a href="https://www.joonsungpark.com/" target="_blank"><img src="static_dir/img/JoonSungPark.jpg" alt="Joon Sung Park"></a>
+            </div>
+            <div class="profile-details">
+              <p><a href="https://www.joonsungpark.com/" target="_blank">Joon Sung Park</a></p>
+              <p>Office Hours: Friday 1:00-2:00 pm</p>
+              <p>Location: Gates Office #360</p>
+            </div>
           </div>
         </div>
-        <!-- <div class="namecard">
-          <div class="profile-photo">
-            <img src="static_dir/img/JoonSungPark.jpg" alt="Joon Sung Park">
+        <div class="namecard-2x">
+          <h6 class="namecard-header">Course Assistants</h6>
+          <div class="namecard-content">
+            <div class="profile-photo">
+              <img src="static_dir/img/CarolynZou.jpg" alt="Carolyn Zou">
+            </div>
+            <div class="profile-details">
+              <p><a href="https://www.carolynzou.com/" target="_blank">Carolyn Zou</a></p>
+              <p>Office Hours: TBD</p>
+              <p>Location: TBD</p>
+            </div>
+            <div class="profile-photo">
+              <img src="static_dir/img/HelenaVasconcelos.jpg" alt="Helena Vasconcelos">
+            </div>
+            <div class="profile-details">
+              <p><a href="https://helenavasc.com/" target="_blank">Helena Vasconcelos</a></p>
+              <p>Office Hours: TBD</p>
+              <p>Location: TBD</p>
+            </div>
           </div>
-          <div class="profile-details">
-            <p><a href="https://www.joonsungpark.com/" target="_blank">Joon Sung Park</a></p>
-            <p>Office Hours: Friday 1:15-2:15 pm</p>
-            <p>Location: Gates 3B Common Area</p>
-          </div>
-        </div> -->
+        </div>
       </div>
 
       <h3>Overview</h3>
@@ -184,7 +198,7 @@
                 <li>R. Louie, A. Nandi, W. Fang, C. Chang, E. Brunskill, D. Yang, Roleplay-doh: Enabling Domain-Experts to Create LLM-simulated Patients via Eliciting and Adhering to Principles. Preprint (2024). <a href="https://arxiv.org/abs/2407.00870" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"><span class="assignment_release">[Project Proposal Release]</span><br><span class="assignment_due">[Due: Assignment 1]</span></td>
+            <td class="assignments"><span class="assignment_release">[Project Proposal Release]</span></td>
           </tr>
 
           <tr>
@@ -200,7 +214,7 @@
                 <li>A. Ashokkumar, L. Hewitt, I. Ghezae, R. Willer, Predicting Results of Social Science Experiments Using Large Language Models (2024). <a href="https://samim.io/dl/Predicting%20results%20of%20social%20science%20experiments%20using%20large%20language%20models.pdf" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"></td>
+            <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span></td>
           </tr>
 
           <tr>
@@ -220,7 +234,7 @@
           </tr>
 
           <tr>
-            <td class="lecture_date">M, 10/23<br><span>(Week 5)</span></td>
+            <td class="lecture_date">M, 10/21<br><span>(Week 5)</span></td>
             <td class="lecture_titles">Generative Agent-Based Models</td>
             <td>
               <p class="lecture_desc">
@@ -236,7 +250,23 @@
           </tr>
 
           <tr>
-            <td class="lecture_date">W, 10/30</td>
+            <td class="lecture_date">W, 10/23</td>
+            <td class="lecture_titles">AgentBank-CS222</td>
+            <td>
+              <p class="lecture_desc">
+                How might we create a shared resource of models that emulate individuals to power generative agent-based models? What ethical considerations and boundaries ought we to consider, and can we draw inspiration from prior works? In this lecture, we will create a bank of agents that represent CS222.
+              </p>
+              <h6 class="req_readings">Required readings:</h6>
+              <ul class="reading_list">
+                <li>International Human Genome Sequencing Consortium. (2001). Initial sequencing and analysis of the human genome. Nature, 409(6822), 860-921. https://doi.org/10.1038/35057062 <a href="https://www.nature.com/articles/35057062" target="_blank">[pdf]</a></li>
+                <li>Kinder, M. (2024). Hollywood writers went on strike to protect their livelihoods from generative AI. Their remarkable victory matters for all workers. Brookings. April 12. <a href="https://www.brookings.edu/articles/hollywood-writers-went-on-strike-to-protect-their-livelihoods-from-generative-ai-their-remarkable-victory-matters-for-all-workers/" target="_blank">[pdf]</a></li>
+              </ul>
+            </td>
+            <td class="assignments"></td>
+          </tr>
+
+          <tr>
+            <td class="lecture_date">M, 10/28<br><span>(Week 6)</span></td>
             <td class="lecture_titles">Equilibria and Butterflies</td>
             <td>
               <p class="lecture_desc">
@@ -252,7 +282,23 @@
           </tr>
 
           <tr>
-            <td class="lecture_date">M, 11/4<br><span>(Week 6)</span></td>
+            <td class="lecture_date">W, 10/30</td>
+            <td class="lecture_titles">Language and Schema of Simulations</td>
+            <td>
+              <p class="lecture_desc">
+                How might we make simulations easy to create? What language and schema ought to describe the building blocks of our simulations, and where can we find inspiration for such a system? This discussion will explore prior systems that developed useful language and schema for complex systems (e.g., in data visualization, agent-based modeling).
+              </p>
+              <h6 class="req_readings">Required readings:</h6>
+              <ul class="reading_list">
+                <li>Bostock, M., Ogievetsky, V., & Heer, J. (2011). D3: Data-Driven Documents. IEEE Transactions on Visualization and Computer Graphics, 17(12), 2301-2309. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6064996&tag=1" target="_blank">[pdf]</a></li>
+                <li>Wilensky, U. (2021, January 15). NetLogo User Manual. Center for Connected Learning and Computer-Based Modeling, Northwestern University. <a href="https://ccl.northwestern.edu/netlogo/docs/" target="_blank">[pdf]</a></li>
+              </ul>
+            </td>
+            <td class="assignments"></td>
+          </tr>
+
+          <tr>
+            <td class="lecture_date">M, 11/4<br><span>(Week 7)</span></td>
             <td class="lecture_titles">Project Proposal: Day 1</td>
             <td>
               <p class="lecture_desc">
@@ -274,7 +320,7 @@
           </tr>
 
           <tr>
-            <td class="lecture_date">M, 11/11<br><span>(Week 7)</span></td>
+            <td class="lecture_date">M, 11/11<br><span>(Week 8)</span></td>
             <td class="lecture_titles">Ethics and Limitations</td>
             <td>
               <p class="lecture_desc">
@@ -301,7 +347,7 @@
           </tr>
 
           <tr>
-            <td class="lecture_date">M, 11/18<br><span>(Week 8)</span></td>
+            <td class="lecture_date">M, 11/18<br><span>(Week 9)</span></td>
             <td class="lecture_titles">Simulating Ourselves and Our Societies With AI</td>
             <td>
               <p class="lecture_desc">
@@ -328,7 +374,7 @@
           </tr>
 
           <tr>
-            <td class="lecture_date">M, 12/2<br><span>(Week 9)</span></td>
+            <td class="lecture_date">M, 12/2<br><span>(Week 10)</span></td>
             <td class="lecture_titles">Project Presentation: Day 1</td>
             <td>
               <p class="lecture_desc">
