--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
             </div>
             <div class="profile-details">
               <p><a href="https://www.carolynzou.com/" target="_blank">Carolyn Zou</a></p>
-              <p>Office Hours: TBD</p>
-              <p>Location: TBD</p>
+              <p>Office Hours: Wednesday 3:00-4:00 pm</p>
+              <p>Location: Gates Office #360</p>
             </div>
             <div class="profile-photo">
               <img src="static_dir/img/HelenaVasconcelos.jpg" alt="Helena Vasconcelos">
             </div>
             <div class="profile-details">
               <p><a href="https://helenavasc.com/" target="_blank">Helena Vasconcelos</a></p>
-              <p>Office Hours: TBD</p>
-              <p>Location: TBD</p>
+              <p>Office Hours: Monday 9:30-10:30 am</p>
+              <p>Location: Gates Office #377</p>
             </div>
           </div>
         </div>
