--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
           <tr>
             <td class="lecture_date">M, 9/30<br><span>(Week 2)</span></td>
-            <td class="lecture_titles">Individuals, Groups, and Populations</td>
+            <td class="lecture_titles">Individuals, Groups, and Populations <a href="static_dir/pdf/StanfordCS222_Lecture3.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 When simulating human behavior, at what level of detail should we focus? Should we simulate the interactions of individuals and their groups, or predict the behaviors of entire populations? A look at the strengths and limitations of simulations at different levels of granularity.
