--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
           <tr>
             <td class="lecture_date">W, 10/2</td>
-            <td class="lecture_titles">Cognitive Architectures</td>
+            <td class="lecture_titles">Cognitive Architectures <a href="static_dir/pdf/StanfordCS222_Lecture4.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How do we create a cognitive unit of the human mind? What were the foundational architectures that were envisioned, and how were they inspired by (and stylized differently from) human minds? What were their limitations? A history of cognitive architectures.
