--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <li>T. R. Sumers, S. Yao, K. Narasimhan, T. L. Griffiths, Cognitive Architectures for Language Agents. Trans. Mach. Learn. Res. (2024). <a href="https://arxiv.org/abs/2309.02427" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"><span class="assignment_release">[Assignment 1 Release]</span></td>
+            <td class="assignments"><a href="assignment1.html" target="_blank"><span class="assignment_release">[Assignment 1 Release]</span></a></td>
           </tr>
 
           <tr>
