assignment 1 minor edits

--- a/assignment1.html
+++ b/assignment1.html
@@ -55,7 +55,7 @@
     <ol>
         <li>Clone the assignment repository: <code>https://github.com/joonspk-research/gabm-stanford-cs222</code></li>
         <li>Set up a Python virtual environment:
-            <pre><code>python3 -m venv myenv
+            <pre><code>python3 -m venv .
 source myenv/bin/activate  # On Windows, use `myenv\Scripts\activate`</code></pre>
         </li>
         <li>Install required packages: <code>pip install -r requirements.txt</code></li>
@@ -186,9 +186,10 @@ curr_agent.save("SyntheticCS222", "matthew_jacobs")</code></pre>
         <li>Whether it was retrieving the right information</li>
         <li>What distinguishes the memories that are considered "important" versus not</li>
     </ul>
+    <p>Please answer these questions in <code>cs222_assignment_1/report/report.txt</code></p>
 
     <h3>Grading</h3>
-    <p>This assignment will be graded out of 10 points. The breakdown is as follows:</p>
+    <p>This assignment will be graded out of 12 points. The breakdown is as follows:</p>
     
     <table>
         <thead>
