assignment1 deadline pushed back

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <li>S. Ansolabehere, J. Rodden, J. M. Snyder Jr., The Strength of Issues: Using Multiple Measures to Gauge Preference Stability, Ideological Constraint, and Issue Voting. American Political Science Review (2008). <a href="https://www.cambridge.org/core/journals/american-political-science-review/article/strength-of-issues-using-multiple-measures-to-gauge-preference-stability-ideological-constraint-and-issue-voting/16F6AF97F7B71AA0112EC9ADF78B553A" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span></td>
+            <td class="assignments"></td>
           </tr>
 
           <tr>
@@ -246,7 +246,7 @@
                 <li>J. M. Epstein, R. L. Axtell, Growing Artificial Societies: Social Science from the Bottom Up (MIT Press, 1996). <a href="https://wtf.tw/ref/epstein_axtell.pdf" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"><span class="assignment_release">[Assignment 2 Release]</span></td>
+            <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span><br><span class="assignment_release">[Assignment 2 Release]</span></td>
           </tr>
 
           <tr>
