assignment1 link edit

--- a/assignment1.html
+++ b/assignment1.html
@@ -53,7 +53,7 @@
 
     <h3>Part 1: Setting up the Directory</h3>
     <ol>
-        <li>Clone the assignment repository: <code>https://github.com/joonspk-research/gabm-stanford-cs222</code></li>
+        <li>Clone the assignment repository: <a href="https://github.com/joonspk-research/gabm-stanford-cs222" target="_blank">https://github.com/joonspk-research/gabm-stanford-cs222</a></li>
         <li>Set up a Python virtual environment:
             <pre><code>python3 -m venv .
 source myenv/bin/activate  # On Windows, use `myenv\Scripts\activate`</code></pre>
