assignment1 link edit

--- a/assignment1.html
+++ b/assignment1.html
@@ -188,6 +188,26 @@ curr_agent.save("SyntheticCS222", "matthew_jacobs")</code></pre>
     </ul>
     <p>Please answer these questions in <code>cs222_assignment_1/report/report.txt</code></p>
 
+    <div class="extra-credit">
+        <h3>Extra Credit (1 pt bonus)</h3>
+        <p>Try implementing retrieval from scratch! In this optional extension, you'll be given a text file with 12 paragraphs of information that may or may not be related to a vanilla cake recipe. By retrieving the 2 relevant items, you'll be able to watch Isabella bake a cake and earn up to 1 point of extra credit.</p>
+        <p style="text-align: center;">
+            <img src="static_dir/img/Isabella.gif" style="width:50%; border-radius: 8%;">
+        </p>
+    </div>
+
+    <div class="submission">
+        <h3>Submission</h3>
+        <p>Submit the following on Gradescope:</p>
+        <ul>
+            <li>Both files in 'report/matthew_jacobs/'</li>
+            <li>'report/report.txt'</li>
+            <li>If you completed the optional extra credit, submit the 'a1-bonus/agent.py' file</li>
+        </ul>
+    </div>
+
+
+
     <h3>Grading</h3>
     <p>This assignment will be graded out of 12 points. The breakdown is as follows:</p>
     
@@ -244,10 +264,15 @@ curr_agent.save("SyntheticCS222", "matthew_jacobs")</code></pre>
                 <td>1</td>
                 <td>The code written is clean, readable, and well-structured</td>
             </tr>
+            <tr>
+                <td>Bonus</td>
+                <td>1</td>
+                <td>Completed the bonus assignment</td>
+            </tr>
         </tbody>
     </table>
 
-    <p>Total possible points: 12 (11s points for the assignment, 1 bonus point for coding style)</p>
+    <p>Total possible points: 12 (+1 bonus point)</p>
 
 
 </body>
