--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
           <tr>
             <td class="lecture_date">M, 10/7<br><span>(Week 3)</span></td>
-            <td class="lecture_titles">Architecting Generative Agents</td>
+            <td class="lecture_titles">Architecting Generative Agents <a href="static_dir/pdf/StanfordCS222_Lecture5.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How might we merge the vision of cognitive architectures with the advances in generative AI to build high-fidelity agents? What are the architectural similarities to past cognitive models, and what new opportunities do they bring? A review of generative agent architectures and the modern technologies that drive them.
